displayed metadata validation error on resource page

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -14,22 +14,22 @@
 
 {% block main %}
     {% block error %}
-        {%  if file_validation_error %}
+        {%  if validation_error %}
             <div class="alert alert-danger alert-dismissible" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <strong>Uploaded File Validation Error:{{ file_validation_error }}</strong>
+                  <strong>Validation Error: {{ validation_error }}</strong>
              </div>
         {%  endif %}
         {%  if file_size_error %}
             <div class="alert alert-danger alert-dismissible" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <strong>Uploaded File Size Error:{{ file_size_error }}</strong>
+                  <strong>Uploaded File Size Error: {{ file_size_error }}</strong>
              </div>
         {%  endif %}
         {%  if resource_creation_error %}
             <div class="alert alert-danger alert-dismissible" role="alert">
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <strong>Failed to Create Resource:{{ resource_creation_error }}</strong>
+                  <strong>Failed to Create Resource: {{ resource_creation_error }}</strong>
              </div>
         {%  endif %}
     {% endblock %}
@@ -95,8 +95,8 @@
         <div id="file-multiple">Multiple file upload is allowed.</div>
         </table>
 
-        <h2 style="color:red">{{ file_size_error }}</h2>
-        <h2 id="file-type-error" style="color:red">{{ file_validation_error }}</h2>
+        <h2 class="text-red">{{ file_size_error }}</h2>
+        <h2 id="file-type-error" class="text-red">{{ validation_error }}</h2>
     </div>
 
     <div class="form-group">
