--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -7,16 +7,7 @@
 <div class="container-fluid" id="main">
     <div class="row">
         <div class="col-lg-3" id="folders">
-             <form method="get" action=".">
-                <table>
-                    <tbody>
-                        {{ form.as_table }}
-                        <tr>
-                            <td><input class="btn btn-default" type="button" value="clear all" onclick="clearAll()"></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </form>
+            <p><input class="btn btn-default" type="button" value="clear all" onclick="clearAllFacted()"></p>
             {% for key, values in facets.fields.items %}
                 {% if values %}
                     <div class="panel-group" id="faceting-{{ key }}">
@@ -65,9 +56,16 @@
 
         </div>
         <div class="col-lg-9" id="items">
+            <div class=resource-search>
+                <form method="get" action=".">
+                    {% for field in form %}
+                     <div class="fieldWrapper">
+                         {{ field }}
+                    </div>
+                {% endfor %}
+                </form>
+            </div>
             <table class="table table-striped table-hover" id="item-selectors">
-                <tr>
-                </tr>
                 <tr>
                     <th>Title</th>
                     <th>Type</th>
@@ -78,7 +76,7 @@
                     {% for result in page.object_list %}
                         <tr>
                             <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
-                            <td>{{ result.object.resource_type }}</td>
+                            <td>{{ result.object.resource_type}}</td>
                             {% if result.object.first_creator.description %}
                             <td><a href="{{ result.object.first_creator.description }}">{{ result.object.first_creator.name  }}</a></td>
                             {% else %}
@@ -87,7 +85,7 @@
                             <td>{{ result.object.updated|date }} {{ result.object.updated|time }}</td>
                         </tr>
                     {% empty %}
-                    <p>Sorry, no results found.</p>
+                    <p>No results found.</p>
                     {% endfor %}
                 {% endif %}
             </table>
@@ -114,13 +112,14 @@
          }
     }
 
-    var clearAll = function(){
+    var clearAllFacted = function(){
         window.localStorage.clear();
         var textSearch = $("#id_q").val();
         var clearURL = "/search/?q=" + textSearch;
         window.location = clearURL;
     }
      $(document).ready(function () {
+         $("#id_q").attr('placeholder', 'Search...');
          reorderDivs();
          $('.collapse').on('shown.bs.collapse', function(){
             $(this).parent().find(".glyphicon-plus").removeClass("glyphicon-plus").addClass("glyphicon-minus");
