--- a/ref_ts/templates/pages/reftimeseriesresource.html
+++ b/ref_ts/templates/pages/reftimeseriesresource.html
@@ -31,7 +31,6 @@
                         <div class="row">
                             <div class="col-sm-4"><strong>Type:</strong></div>
                             <div class="col-sm-8">{{ referenceURL.type }}</div>
-                            <div class="col-sm-8">{{ referenceURL.type }}</div>
                         </div>
                     <hr style="border:0">
                     {%  endif %}
@@ -72,7 +71,11 @@
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
                             <div class="col-sm-4"><strong>Code:</strong></div>
-                            <div class="col-sm-8">{{ method.value }}</div>
+                            <div class="col-sm-8">{{ method.code }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Description:</strong></div>
+                            <div class="col-sm-8">{{ method.description }}</div>
                         </div>
                     <hr style="border:0">
                     {% endif %}
@@ -81,12 +84,16 @@
                     {% if quality_level %}
                         <h4><strong>Quality Control Level:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
-                        {% if quality_level.value %}
-                            <div class="row">
-                                <div class="col-sm-4"><strong>Definition:</strong></div>
-                                <div class="col-sm-8">{{ quality_level.value }}</div>
-                            </div>
-                        {% endif %}
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Code:</strong></div>
+                            <div class="col-sm-8">{{ quality_level.code }}</div>
+                        </div>
+                       {% if quality_level.definition %}
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Definition:</strong></div>
+                            <div class="col-sm-8">{{ quality_level.definition }}</div>
+                        </div>
+                    {% endif %}
                     {% endif %}
                 </div>
             </div>
