[#502] download on fly

--- a/ref_ts/templates/pages/reftimeseriesresource.html
+++ b/ref_ts/templates/pages/reftimeseriesresource.html
@@ -47,6 +47,10 @@
                             <div class="col-sm-4"><strong>Name:</strong></div>
                             <div class="col-sm-8">{{ site.name }}</div>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-4"><strong>Network:</strong></div>
+                            <div class="col-sm-8">{{ site.net_work }}</div>
+                        </div>
                     <hr style="border:0">
                     {%  endif %}
                 </div>
