--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% load geoanalytics_tags pages_tags mezzanine_tags comment_tags %}
+{% load geoanalytics_tags pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
+
+{# {% block title %}{{ user|best_name }}'s Resources{% endblock %}#}
 {% block title %}Discovery{% endblock %}
 
 {% block main %}
@@ -81,6 +83,75 @@
                 {% endif %}
             {% endfor %}
 
+            {% if facets.dates.created %}
+            {# <p>{{ facets.dates.created.start|parse_iso|date:'d/m/Y'}}</p> #}
+                {% for key, values in facets.dates.items %}
+                    {% if values %}
+                        <div class="panel-group" id="faceting-{{ key }}">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" href="#{{ key }}">&nbsp; Filter By {{ key }}
+                                            <span class="glyphicon glyphicon-plus pull-left">
+                                            </span>
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="{{ key }}" class="panel-collapse collapse"}>
+                                    <ul class="list-group">
+                                    {% for value_key, value_value in values.items %}
+                                        {% if value_value > 1 and value_key != 'end' and value_key != 'start' and value_key != 'gap' %}
+                                            <li class="list-group-item">
+                                                <input class="faceted-selections" id="{{ value_key|parse_iso|date:'m/d/Y' }}" value="{{ key }},{{ value_key|parse_iso|date:'m/d/Y' }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ value_key|parse_iso|date:'m/d/Y' }}
+                                                <span class="label label-default label-pill pull-right badge"
+                                                {% if value_value <= 1 %}
+                                                    style="background-color:rgb(254, 0, 0)"
+                                                {% elif value_value > 1 and value_value <= 2 %}
+                                                    style="background-color:rgb(238, 0, 16)"
+                                                {% elif value_value > 2 and value_value <= 4 %}
+                                                    style="background-color:rgb(222, 0, 32)"
+                                                {% elif value_value > 4 and value_value <= 6 %}
+                                                    style="background-color:rgb(206, 0, 48)"
+                                                {% elif value_value > 6 and value_value <= 10 %}
+                                                    style="background-color:rgb(190, 0, 64)"
+                                                {% elif value_value > 10 and value_value <= 18 %}
+                                                    style="background-color:rgb(174, 0, 80)"
+                                                {% elif value_value > 18 and value_value <= 32 %}
+                                                    style="background-color:rgb(158, 0, 96)"
+                                                {% elif value_value > 32 and value_value <= 57 %}
+                                                    style="background-color:rgb(142, 0, 112)"
+                                                {% elif value_value > 57 and value_value <= 100 %}
+                                                    style="background-color:rgb(127, 0, 127)"
+                                                {% elif value_value > 100 and value_value <= 178 %}
+                                                    style="background-color:rgb(111, 0, 143)"
+                                                {% elif value_value > 178 and value_value <= 317 %}
+                                                    style="background-color:rgb(95, 0, 159)"
+                                                {% elif value_value > 317 and value_value <= 563 %}
+                                                    style="background-color:rgb(79, 0, 175)"
+                                                {% elif value_value > 563 and value_value <= 1000 %}
+                                                    style="background-color:rgb(63, 0, 191)"
+                                                {% elif value_value > 1000 and value_value <= 1779 %}
+                                                    style="background-color:rgb(47, 0, 207)"
+                                                {% elif value_value > 1779 and value_value <= 3163 %}
+                                                    style="background-color:rgb(31, 0, 223)"
+                                                {% elif value_value > 3163 and value_value <= 5624 %}
+                                                    style="background-color:rgb(15, 0, 239)"
+                                                {% elif value_value > 5624 and value_value <= 10000 %}
+                                                    style="background-color:rgb(0, 0, 254)"
+                                                {% endif %}>{{ value_value }}
+                                                </span>
+                                                {#<a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>#}
+                                            </li>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+
         </div>
         <div class="col-lg-9" id="items">
             <div class=resource-search>
@@ -103,7 +174,7 @@
                     {% for result in page.object_list %}
                         <tr>
                             <td><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></td>
-                            <td>{{ result.object.resource_type }}</td>
+                            <td>{{ result.object|resource_type }}</td>
                             {% if result.object.first_creator.description %}
                             <td><a href="{{ result.object.first_creator.description }}">{{ result.object.first_creator.name  }}</a></td>
                             {% else %}
